# patch-generation_final_version

./: .gitignore  REPORT.md  apply_patches.py  fire_hooks_demo.py  run_instrumentation.py
instrumentation_patches/: .gitignore  ARCHITECTURE.md  ask.py  patchgen_REPORT.md  pyproject.toml  start_awcp.sh
instrumentation_patches/examples/agents/: bare_agent.py  fully_instrumented_agent.py  partial_agent.py
instrumentation_patches/src/awcp/: __init__.py
instrumentation_patches/src/awcp/agent_hooks/: __init__.py  types.py
instrumentation_patches/src/awcp/observability/: __init__.py  setup.py
instrumentation_patches/src/awcp_hooks/: __init__.py
instrumentation_patches/src/awcp_instrumentation/: __init__.py  api.py
instrumentation_patches/src/awcp_instrumentation.egg-info/: SOURCES.txt  top_level.txt
instrumentation_patches/src/awcp_instrumentation/domain/: __init__.py
instrumentation_patches/tests/: test_api.py
instrumentation_patches/tests/application/: test_scanner.py
instrumentation_patches/tests/application/applicator/: test_import_manager.py  test_location_resolver.py  test_models.py  test_patch_applier.py  test_source_editor.py
instrumentation_patches/tests/application/capability_analyzer/: test_ast_capability_analyzer.py  test_capability_hook_mapper.py
instrumentation_patches/tests/application/detector/: test_ast_helpers.py  test_hook_detector.py  test_rules.py
instrumentation_patches/tests/application/gap_reporter/: test_gap_reporter.py  test_models.py  (+1 more)
instrumentation_patches/tests/domain/: test_entities.py  test_enums.py
(+114 files in other folders)
